# sdr

./: .gitignore  Cargo.toml  README.md  claude.bat  sdr.env  test.ps1
src/: adsb.rs  apt.rs  fm.rs  main.rs  predict.rs  r820t.rs  satdump.rs  voice.rs
tle_cache/: 25338.tle  28654.tle  33591.tle  57166.tle  59051.tle
web/backend/: Cargo.toml
web/backend/src/: main.rs
web/frontend/: Cargo.toml  index.html
web/frontend/src/: main.rs
web/shared/src/: lib.rs
