[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sdr-web"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["bmp", "png"] }
anyhow = "1"
sgp4 = "2"
shared = { path = "../shared" }
