[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frontend"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
gloo-net = { version = "0.6", features = ["http"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
shared = { path = "../shared" }
